clusters/beryjuorg-defr/istio-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    topology.istio.io/network: de-freiburg
