clusters/beryjuorg-defr/istio-system/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: kiali
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
  - host: kiali.defr.k8s.beryju.org
    http:
      paths:
      - backend:
          service:
            name: kiali
            port:
              number: 20001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kiali.defr.k8s.beryju.org
    secretName: kiali-acme
