clusters/beryjuorg-defr/istio-system/authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: oauth-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: "authentik"
  rules:
  - to:
    - operation:
        hosts:
        - "whoami.10.120.21.3.nip.io"
